deploy/manifests/ingress/blog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
  namespace: blog-app
spec:
  ingressClassName: nginx
  rules:
    - host: 10.42.42.100.nip.io  # Using nip.io for IP-based access
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: blog-service
                port:
                  number: 80
